ajout d'un article

--- a/computer.html
+++ b/computer.html
@@ -59,19 +59,19 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="index.html">Home</a>
+                                 <a class="nav-link" href="index.html">Acceuille</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="about.html">En savoir plus</a>
                               </li>
                               <li class="nav-item  active">
-                                 <a class="nav-link" href="computer.html">Computer</a>
+                                 <a class="nav-link" href="computer.html">PC</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="laptop.html">Laptop</a>
+                                 <a class="nav-link" href="laptop.html">Pc Portable</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="product.html">Products</a>
+                                 <a class="nav-link" href="product.html">Nos Article</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contactez-nous </a>
@@ -80,7 +80,7 @@
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class="nav-item d_none">
-                                 <a class="nav-link" href="#">Login</a>
+                                 <a class="nav-link" href="#">Ce connecter</a>
                               </li>
                            </ul>
                         </div>
@@ -98,9 +98,9 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="titlepage">
-                     <p>Every Computer and laptop</p>
-                     <h2>Up to 40% off !</h2>
-                     <a class="read_more" href="#">Shop Now</a>
+                     <p>Pack et Sac disponible à</p>
+                     <h2>40% de reductions sur les 3 achats !</h2>
+                     <a class="read_more" href="#">Acheter Maintenant</a>
                   </div>
                </div>
                <div class="col-md-6">
@@ -130,20 +130,20 @@
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3>À propos de nous</h3>
                      <ul class="about_us">
-                        <li>dolor sit amet, consectetur<br> magna aliqua. Ut enim ad <br>minim veniam, <br> quisdotempor incididunt r</li>
+                        <li>Nous sommes 8 à<br> travailler sur ce projet, <br>et toutes personne a une <br> responsabiliter équitable.</li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3>Contactez-nous </h3>
                      <ul class="conta">
-                        <li>dolor sit amet,<br> consectetur <br>magna aliqua.<br> quisdotempor <br>incididunt ut e </li>
+                        <li>Par Discord ou Ici.<br> Nous sommes totalement a votre écoute,<br>et nous vous aideront<br>dans la mesure du possible.<br></li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <form class="bottom_form">
-                        <h3>Newsletter</h3>
-                        <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                        <button class="sub_btn">subscribe</button>
+                        <h3>ICI pour les news</h3>
+                        <input class="enter" placeholder="Entrer votre email" type="text" name="Enter your email">
+                        <button class="sub_btn">S'inscrire</button>
                      </form>
                   </div>
                </div>
