--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                  <a class="nav-link" href="laptop.html">Pc Portable</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="product.html">Nos Production</a>
+                                 <a class="nav-link" href="product.html">Nos Article</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contactez-nous</a>
@@ -265,56 +265,56 @@
                      <div class="row">
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product1.png" alt="#"/></figure>
-                              <h3>Sac 1</h3>
+                              <figure><a href="product.html"><img src="images/product1.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 1</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product2.png" alt="#"/></figure>
-                              <h3>Sac 2</h3>
+                              <figure><a href="product.html"><img src="images/product2.png" alt="#"/></a></figure><h3>
+                                 <a href="product.html">Sac 2</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product3.png" alt="#"/></figure>
-                              <h3>Sac 3</h3>
+                              <figure><a href="product.html"><img src="images/product3.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac さん</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product4.png" alt="#"/></figure>
-                              <h3>Sac 4</h3>
+                              <figure><a href="product.html"><img src="images/product4.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 4</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product5.png" alt="#"/></figure>
-                              <h3>Sac 5</h3>
+                              <figure><a href="product.html"><img src="images/product5.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 5</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product6.png" alt="#"/></figure>
-                              <h3>Sac 6</h3>
+                              <figure><a href="product.html"><img src="images/product6.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 6</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="images/product7.png" alt="#"/></figure>
-                              <h3>Sac 7</h3>
+                              <figure><a href="product.html"><img src="images/product7.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 7</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="images/product8.png" alt="#"/></figure>
-                              <h3>Sac 8</h3>
+                              <figure><a href="product.html"><img src="images/product8.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 8</a></h3>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="images/product9.png" alt="#"/></figure>
-                              <h3>Sac 9</h3>
+                              <figure><a href="product.html"><img src="images/product9.png" alt="#"/></a></figure>
+                              <h3><a href="product.html">Sac 9</a></h3>
                            </div>
                         </div>
                         <div class="col-md-12">
