--- a/product.html
+++ b/product.html
@@ -59,19 +59,19 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="index.html">Home</a>
+                                 <a class="nav-link" href="index.html">Acceuille</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="about.html">En savoir plus</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="computer.html">Computer</a>
+                                 <a class="nav-link" href="computer.html">PC</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="laptop.html">Laptop</a>
+                                 <a class="nav-link" href="laptop.html">Pc Portable</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="product.html">Products</a>
+                                 <a class="nav-link" href="product.html">Nos Article</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contactez-nous </a>
@@ -80,7 +80,7 @@
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class="nav-item d_none">
-                                 <a class="nav-link" href="#">Login</a>
+                                 <a class="nav-link" href="#">Ce connecter</a>
                               </li>
                            </ul>
                         </div>
@@ -98,7 +98,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Our Products</h2>
+                     <h2>Nos Article</h2>
                   </div>
                </div>
             </div>
@@ -109,59 +109,68 @@
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="images/product1.png" alt="#"/></figure>
-                              <h3>Computer</h3>
+                              <h3>Sac 1</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse que le jaune <br> dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="images/product2.png" alt="#"/></figure>
-                              <h3>Laptop</h3>
+                              <h3>Sac 2</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse que le black <br> dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="images/product3.png" alt="#"/></figure>
-                              <h3>Tablet</h3>
+                              <h3>Sac さん</h3>
+                              <p>Konichiwa jeune samuraï<br> Ce sac à etait fait sur mesure <br> rien pour toi et pour toi WoOoOoO </p>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="images/product4.png" alt="#"/></figure>
-                              <h3>Speakers</h3>
+                              <h3>Sac 4</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="images/product5.png" alt="#"/></figure>
-                              <h3>internet</h3>
+                              <h3>Sac 5</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="images/product6.png" alt="#"/></figure>
-                              <h3>Hardisk</h3>
+                              <h3>Sac 6</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
                               <figure><img src="images/product7.png" alt="#"/></figure>
-                              <h3>Rams</h3>
+                              <h3>Sac 7</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
                               <figure><img src="images/product8.png" alt="#"/></figure>
-                              <h3>Bettery</h3>
+                              <h3>Sac 8</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
                               <figure><img src="images/product9.png" alt="#"/></figure>
-                              <h3>Drive</h3>
+                              <h3>Sac 9</h3>
+                              <p>Petit sac fait maison!<br> Rien de plus beau gosse dans la street.</p>
                            </div>
                         </div>
                         <div class="col-md-12">
-                           <a class="read_more" href="#">See More</a>
+                           <a class="read_more" href="#">Voir Plus!</a>
                         </div>
                      </div>
                   </div>
@@ -187,20 +196,20 @@
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3>À propos de nous</h3>
                      <ul class="about_us">
-                        <li>dolor sit amet, consectetur<br> magna aliqua. Ut enim ad <br>minim veniam, <br> quisdotempor incididunt r</li>
+                        <li>Nous sommes 8 à<br> travailler sur ce projet, <br>et toutes personne a une <br> responsabiliter équitable.</li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3>Contactez-nous </h3>
                      <ul class="conta">
-                        <li>dolor sit amet,<br> consectetur <br>magna aliqua.<br> quisdotempor <br>incididunt ut e </li>
+                        <li>Par Discord ou Ici.<br> Nous sommes totalement a votre écoute,<br>et nous vous aideront<br>dans la mesure du possible.<br></li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <form class="bottom_form">
-                        <h3>Newsletter</h3>
+                        <h3>ICI pour les news</h3>
                         <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                        <button class="sub_btn">subscribe</button>
+                        <button class="sub_btn">s'inscrire</button>
                      </form>
                   </div>
                </div>
