--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <form class="bottom_form">
                         <h3>ICI pour les news</h3>
-                        <input class="enter" placeholder="Entrer votre Email" type="text" name="enter your email">
+                        <input class="enter" placeholder="Entrer votre email" type="text" name="Enter your email">
                         <button class="sub_btn">S'inscrire</button>
                      </form>
                   </div>
