--- a/laptop.html
+++ b/laptop.html
@@ -59,19 +59,19 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item">
-                                 <a class="nav-link" href="index.html">Home</a>
+                                 <a class="nav-link" href="index.html">Acceuille</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="about.html">En savoir plus</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="computer.html">Computer</a>
+                                 <a class="nav-link" href="computer.html">PC</a>
                               </li>
                               <li class="nav-item  active">
-                                 <a class="nav-link" href="laptop.html">Laptop</a>
+                                 <a class="nav-link" href="laptop.html">Pc Portable</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="product.html">Products</a>
+                                 <a class="nav-link" href="product.html">Nos Article</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contactez-nous </a>
@@ -80,7 +80,7 @@
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class="nav-item d_none">
-                                 <a class="nav-link" href="#">Login</a>
+                                 <a class="nav-link" href="#">Ce connecter</a>
                               </li>
                            </ul>
                         </div>
@@ -140,7 +140,7 @@
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <form class="bottom_form">
-                        <h3>Completer pour ne rien raté.</h3>
+                        <h3>ICI pour les news</h3>
                         <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
                         <button class="sub_btn">Envoyé</button>
                      </form>
